--- a/src/components/atoms/Chip.astro
+++ b/src/components/atoms/Chip.astro
@@ -1,5 +1,5 @@
 ---
-import Icon, { type IconName } from "../Icon.astro";
+import Icon, { type IconName } from "./Icon.astro";
 
 type Props = {
   as?: "button" | "a";
