--- a/src/components/PreferencesDrawer.astro
+++ b/src/components/PreferencesDrawer.astro
@@ -1,17 +1,5 @@
 ---
-import type { Lang } from "../i18n/i18n";
-import PreferencesPanel from "./PreferencesPanel.astro";
-
-type Props = {
-  lang: Lang;
-};
-
-const { lang } = Astro.props;
+import OrganismPreferencesDrawer from "./organisms/PreferencesDrawer.astro";
 ---
 
-<div id="acg-prefs" class="acg-prefs-drawer" data-prefs-drawer>
-  <div class="acg-prefs-drawer-panel">
-    <PreferencesPanel lang={lang} closable />
-  </div>
-</div>
-
+<OrganismPreferencesDrawer {...(Astro.props as any)} />
